# autoshelf

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SPEC.md  SPEC_v1.md  pyproject.toml  pyrightconfig.json  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  release-windows.yml  release.yml
autoshelf/: __init__.py  __main__.py  applier.py  apply_state.py  bundle.py  config.py  config_admin.py  db.py  doctor.py  fileops.py  filesystem.py  i18n.py  logging_utils.py  manifest.py  paths.py  preview.py  progress.py  quarantine.py  rules.py  scanner.py  shortcuts.py  stats.py  targeting.py  undo.py  verify.py
autoshelf/config_migrations/: __init__.py  helpers.py  models.py  registry.py
autoshelf/config_migrations/versions/: __init__.py  v1_normalize_legacy_fields.py  v2_add_planner_reliability_defaults.py  v3_ondevice_llm_defaults.py
autoshelf/gui/: app.py  apply.py  contrast.py  design.py  history.py  home.py  icons.py  options.py  progress.py  review.py  review_models.py  review_tree.py  settings.py  theme.py  tray.py
autoshelf/gui/widgets/: __init__.py  banner.py  button.py  card.py  dropzone.py  empty_state.py  key_value.py  progress.py  spinner.py  titlebar.py  toast.py  toggle.py  tree_diff.py
autoshelf/i18n/: en.json  glossary.md  ko.json
autoshelf/llm/: embedded.py  model_registry.py  openai_local.py  policy.py  system_probe.py
autoshelf/parsers/: __init__.py  archive.py  base.py  code.py  hwp.py  image.py  media.py  office.py  pdf.py  registry.py  text.py
autoshelf/planner/: __init__.py  chunking.py  contextual.py  draft.py  llm.py  models.py  naming.py  near_duplicates.py  pipeline.py  prompts.py  providers.py  rate_limit.py  reliability.py  review.py  validation.py
docs/: ARCHITECTURE.md  DESIGN.md  RELEASE.md  USER_GUIDE.md
examples/: README.md
examples/fixtures/: generate_demo.py
packaging/: Makefile  build.py  bump_version.py  generate_manpage.py  pyinstaller.spec
packaging/linux/: autoshelf.1  autoshelf.desktop
packaging/windows/: autoshelf.iss
resources/: icons.qrc
resources/icons/lucide/: LICENSE
resources/styles/: app.qss
tests/: conftest.py  test_applier.py  test_build_metadata.py  test_bundle.py  test_cli.py  test_config.py  test_docs.py  test_doctor.py  test_e2e.py  test_examples.py  test_fileops.py  test_gui_design_tokens.py  test_gui_icons.py  test_gui_review.py  test_gui_review_models.py  test_gui_screens_ux.py  test_gui_smoke.py  test_gui_theming.py  test_gui_widgets.py  test_i18n.py  test_llm_runtime.py  test_manifest.py  test_near_duplicates.py  test_packaging_scripts.py  test_parsers.py  test_planner_offline.py  test_planner_online.py  test_preview.py  test_pyinstaller_spec.py  test_quarantine.py  test_rules.py  test_scanner.py  test_verify.py  test_windows_installer_script.py
