[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autoshelf"
version = "1.0.32"
description = "Offline-first folder organizer with optional Anthropic planning and PySide6 GUI"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [{ name = "Cheol-H-Jeong" }]
dependencies = [
  "loguru>=0.7,<1",
  "pydantic>=2.7,<3",
  "sqlalchemy>=2.0,<3",
]

[project.optional-dependencies]
gui = [
  "PySide6>=6.8,<7",
  "keyring>=25,<26",
]
parsers = [
  "pypdf>=5,<6",
  "pdfminer.six>=20231228",
  "python-pptx>=1,<2",
  "openpyxl>=3.1,<4",
  "xlrd>=2,<3",
  "python-docx>=1,<2",
  "olefile>=0.47,<1",
  "charset-normalizer>=3.3,<4",
  "ebooklib>=0.18,<1",
  "mutagen>=1.47,<2",
  "pylnk3>=0.4,<1",
  "Pillow>=10,<12",
]
llm = ["anthropic>=0.51,<1"]
rules = ["PyYAML>=6,<7"]
dev = [
  "pytest>=8,<9",
  "ruff>=0.11,<1",
  "pyright>=1.1.390,<2",
  "yamllint>=1.35,<2",
]
all = [
  "PySide6>=6.8,<7",
  "keyring>=25,<26",
  "pypdf>=5,<6",
  "pdfminer.six>=20231228",
  "python-pptx>=1,<2",
  "openpyxl>=3.1,<4",
  "xlrd>=2,<3",
  "python-docx>=1,<2",
  "olefile>=0.47,<1",
  "charset-normalizer>=3.3,<4",
  "ebooklib>=0.18,<1",
  "mutagen>=1.47,<2",
  "pylnk3>=0.4,<1",
  "Pillow>=10,<12",
  "anthropic>=0.51,<1",
  "PyYAML>=6,<7",
  "pytest>=8,<9",
  "ruff>=0.11,<1",
  "pyright>=1.1.390,<2",
  "yamllint>=1.35,<2",
]

[project.scripts]
autoshelf = "autoshelf.__main__:main"

[project.entry-points."autoshelf.parsers"]
archive = "autoshelf.parsers.archive:PARSER_SPEC"
code = "autoshelf.parsers.code:PARSER_SPEC"
hwp = "autoshelf.parsers.hwp:PARSER_SPEC"
image = "autoshelf.parsers.image:PARSER_SPEC"
media = "autoshelf.parsers.media:PARSER_SPEC"
pdf = "autoshelf.parsers.pdf:PARSER_SPEC"
text = "autoshelf.parsers.text:PARSER_SPEC"

[project.entry-points."autoshelf.llm_providers"]
anthropic = "autoshelf.planner.providers:anthropic_provider"
fake = "autoshelf.planner.providers:fake_provider"

[project.entry-points."autoshelf.naming_rules"]
default = "autoshelf.planner.validation:builtin_naming_rule"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["autoshelf*"]

[tool.setuptools.package-data]
autoshelf = ["i18n/*.json"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"
